@@ -1,6 +1,8 @@
 package pers.solid.mishang.uc.item;
 
 import com.google.common.collect.Collections2;
+import net.fabricmc.api.EnvType;
+import net.fabricmc.api.Environment;
 import net.minecraft.block.Block;
 import net.minecraft.client.item.TooltipContext;
 import net.minecraft.item.ItemStack;
@@ -18,6 +20,7 @@ import pers.solid.mishang.uc.text.TextContext;
 import pers.solid.mishang.uc.util.TextBridge;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class StandingSignBlockItem extends NamedBlockItem {
@@ -27,25 +30,27 @@ public class StandingSignBlockItem extends NamedBlockItem {
 
   protected static @NotNull Stream<TextContext> getTextContextsFromNbt(@Nullable NbtElement nbt) {
     if (nbt == null) return Stream.empty();
-    else if (nbt instanceof NbtList nbtList) {
+    else if (nbt instanceof NbtList) {
+      final NbtList nbtList = (NbtList) nbt;
       return nbtList.stream().map(nbt1 -> TextContext.fromNbt(nbt1, StandingSignBlockEntity.DEFAULT_TEXT_CONTEXT));
     } else {
       return Stream.of(TextContext.fromNbt(nbt, StandingSignBlockEntity.DEFAULT_TEXT_CONTEXT));
     }
   }
 
+  @Environment(EnvType.CLIENT)
   @Override
   public void appendTooltip(
       ItemStack stack, @Nullable World world, List<Text> tooltip, TooltipContext context) {
     super.appendTooltip(stack, world, tooltip, context);
-    final NbtCompound nbt = stack.getSubNbt("BlockEntityTag");
+    final NbtCompound nbt = stack.getSubTag("BlockEntityTag");
     if (nbt == null) return;
-    final List<TextContext> frontTexts = getTextContextsFromNbt(nbt.get("frontTexts")).toList();
+    final List<TextContext> frontTexts = getTextContextsFromNbt(nbt.get("frontTexts")).collect(Collectors.toList());
     if (!frontTexts.isEmpty()) {
       tooltip.add(TextBridge.translatable("block.mishanguc.tooltip.standing_sign_block_front").formatted(Formatting.GRAY));
       tooltip.addAll(Collections2.transform(frontTexts, TextContext::asStyledText));
     }
-    final List<TextContext> backTexts = getTextContextsFromNbt(nbt.get("backTexts")).toList();
+    final List<TextContext> backTexts = getTextContextsFromNbt(nbt.get("backTexts")).collect(Collectors.toList());
     if (!backTexts.isEmpty()) {
       tooltip.add(TextBridge.translatable("block.mishanguc.tooltip.standing_sign_block_back").formatted(Formatting.GRAY));
       tooltip.addAll(Collections2.transform(backTexts, TextContext::asStyledText));
@@ -55,10 +60,10 @@ public class StandingSignBlockItem extends NamedBlockItem {
 
   @Override
   public Text getName(ItemStack stack) {
-    final NbtCompound nbt = stack.getSubNbt("BlockEntityTag");
+    final NbtCompound nbt = stack.getSubTag("BlockEntityTag");
     if (nbt == null) return super.getName(stack);
     final MutableText text = super.getName(stack).copy();
-    final List<MutableText> texts = Stream.concat(getTextContextsFromNbt(nbt.get("frontTexts")), getTextContextsFromNbt(nbt.get("backTexts"))).map(TextContext::asStyledText).limit(20).toList();
+    final List<MutableText> texts = Stream.concat(getTextContextsFromNbt(nbt.get("frontTexts")), getTextContextsFromNbt(nbt.get("backTexts"))).map(TextContext::asStyledText).limit(20).collect(Collectors.toList());
     if (!texts.isEmpty()) {
       MutableText appendable = TextBridge.empty();
       texts.forEach(t -> appendable.append(" ").append(t));
